WIP - board sensor + state machines in

--- a/esp32/CMakeLists.txt
+++ b/esp32/CMakeLists.txt
@@ -4,13 +4,15 @@ cmake_minimum_required(VERSION 3.5)
 
 # set(CMAKE_C_CPPLINT "cpplint;--exclude=$ENV{IDF_PATH}/**;--exclude=../main/linenoise_no_echo.c;--exclude=dummy_main_src.c")
 
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+project(testbed C)
+
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-    add_custom_target(doxyDoc COMMAND ${DOXYGEN_EXECUTABLE} "${CMAKE_BINARY_DIR}/docs/doxyfile"
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-        COMMENT "Building user's documentation into doxyDoc build dir..."
+    add_custom_target(doc ALL COMMAND ${DOXYGEN_EXECUTABLE} "docs/doxyfile"
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+        COMMENT "Building user's documentation into ${PROJECT_SOURCE_DIR}/docs/compiled"
     )
 endif()
 
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(mvm C)
+
