--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,12 @@ jobs:
       run: |
         git submodule init
         git submodule update --recursive
-       
+        
+    # Setup ESP-IDF
+    - name: Install and Setup ESP-IDF
+      run: |
+        source thirdparty/esp-idf/export.sh
+        ./thirdparty/esp-idf/install.sh
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
