--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,31 +15,38 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
-    - name: Install required packages
-      run: sudo apt install cmake ninja-build gperf flex bison python-pip doxygen graphviz texlive-latex-base
 
-    # Runs a single command using the runners shell
+    - name: Install required packages
+      run: |
+        sudo apt install --yes --force-yes cmake ninja-build gperf flex bison python-pip doxygen graphviz texlive-latex-base
+
+    # Initialize git submodules for thirdparty repositories (Unity and ESP-IDF)
     - name: Update git submodules
       run: |
         git submodule init
-        git submodule update --recursive
-        
+        git submodule update --init --recursive
+
     # Setup ESP-IDF
-    - name: Install and Setup ESP-IDF
+    - name: Install ESP-IDF tools
       run: |
-        source thirdparty/esp-idf/export.sh
+        python -m pip uninstall virtualenv
+        python -m pip install virtualenv==16.7.9
         ./thirdparty/esp-idf/install.sh
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    # Run actual build
+    - name: Perform build
       run: |
         source thirdparty/esp-idf/export.sh
         cd esp32
         idf.py build
+
+    - uses: actions/upload-artifact@v1
+      with:
+        name: testbed.bin
+        path: esp32/build/testbed.bin
