--- a/esp32/main/CMakeLists.txt
+++ b/esp32/main/CMakeLists.txt
@@ -5,7 +5,7 @@ set(COMPONENT_SRCS
     "board_ps.c"
     "board_fs.c"
     "board_sw.c"
-    "link.c"
+    "serial_link.c"
     "hal.c"
     "drv_i2c_ms5525dso.c"
     "drv_i2c_tca9548a.c"
